elliptic/envoy/http/httproutea.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: policy-httproute-servicea
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-servicea
  rateLimit:
    local:
      rules:
      - clientSelectors:
        - path:
            type: Exact
            value: /servicea/hi
        limit:
          requests: 1
          unit: Hour

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-servicea
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: servicea
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /servicea
