elliptic/envoy/http/httprouteb.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-serviceb
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: serviceb
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /serviceb
